--- a/force-app/main/default/classes/ABSLI_AckIGMSComplaintIntegration.cls
+++ b/force-app/main/default/classes/ABSLI_AckIGMSComplaintIntegration.cls
@@ -195,6 +195,8 @@ public with sharing class ABSLI_AckIGMSComplaintIntegration implements ASF_Integ
         public string Complaint_Status_Id {get;set;}
         public string Option{get;set;}
         public string Mode{get;set;}
+        public String Addressed_To_Insurer { get; set; }
+        public String Trans_Login_Id { get; set; }
         
         @SuppressWarnings('PMD.ExcessiveParameterList')
         public objReq() {
@@ -202,6 +204,8 @@ public with sharing class ABSLI_AckIGMSComplaintIntegration implements ASF_Integ
             this.Status_Change_Date = ABCL_IntegrationCommonUtility.dateFormat(System.today(), 'dd-MM-YYYY');
             this.Option = '1';
             this.Mode = '2';
+            this.Addressed_To_Insurer = ABSLI_Constants.ABSLI_IGMS_ADDRESS_TO_INSURER_Y;
+            this.Trans_Login_Id = ABSLI_Constants.ABSLI_IGMS_TRANS_LOGIN_ID;
         }
     }
     /**
