--- a/force-app/main/default/classes/ABSLI_IntegrationQueryHelper.cls
+++ b/force-app/main/default/classes/ABSLI_IntegrationQueryHelper.cls
@@ -34,6 +34,7 @@ public with sharing class ABSLI_IntegrationQueryHelper {
 			FROM Case
 			WHERE Id = :caseId
 			WITH SECURITY_ENFORCED
+			FOR UPDATE
 		];
 	}
 
