--- a/force-app/main/default/classes/LeadTriggerHelper.cls
+++ b/force-app/main/default/classes/LeadTriggerHelper.cls
@@ -12,18 +12,19 @@ public class LeadTriggerHelper {
 * @Description - Sending Lead to Lead management system
 *****************************************************************************************************************/
   public static void sendLeadToCRM(Map<Id,Lead> newLeadMap){ 
-    ABHFL_LeadCreationAPI.executeSendLeadToCRM(newLeadMap.keySet());  
-  }
+     /* Ticket: INC000000034556
+		Modified by: Vikas Kore
+		Description :To resrict the creation of leads of other LOB's
+	*/
 
-  /****************************************************************************************************************
-  * @Function - populateLeadFields
-  * @param - newLeadList
-  * @return - void.
-  * @Description - Sending Lead to ABSLIG_BusinessLogic_HelperClass
-  ***********************************************************/
-  public void populateLeadFields(List<Lead> newLeadList){
-    
-    ABSLIG_BusinessLogic_HelperClass absligBusinessLogicHelperClassObj = new ABSLIG_BusinessLogic_HelperClass();
-    absligBusinessLogicHelperClassObj.prePopulateFields(newLeadList);
+      Map<Id,Lead> ABHFLNewLeadMap = new Map<Id,Lead>();
+        for(lead lTest: newLeadMap.values()){
+            if(lTest.Business_Unit__c == 'ABHFL'){
+                ABHFLNewLeadMap.put(lTest.Id,lTest);
+                    
+                    }
+        }
+        ABHFL_LeadCreationAPI.executeSendLeadToCRM(ABHFLNewLeadMap.keySet());  
+    //ABHFL_LeadCreationAPI.executeSendLeadToCRM(newLeadMap.keySet());  
   }
 }
