--- a/force-app/main/default/classes/LeadTriggerHelper.cls
+++ b/force-app/main/default/classes/LeadTriggerHelper.cls
@@ -25,6 +25,18 @@ public class LeadTriggerHelper {
                     }
         }
         ABHFL_LeadCreationAPI.executeSendLeadToCRM(ABHFLNewLeadMap.keySet());  
-    ///ABHFL_LeadCreationAPI.executeSendLeadToCRM(newLeadMap.keySet());  
+    //ABHFL_LeadCreationAPI.executeSendLeadToCRM(newLeadMap.keySet());  
   }
+
+/****************************************************************************************************************
+  * @Function - populateLeadFields
+  * @param - newLeadList
+  * @return - void.
+  * @Description - Sending Lead to ABSLIG_BusinessLogic_HelperClass
+  ***********************************************************/
+  public void populateLeadFields(List<Lead> newLeadList){
+
+    ABSLIG_BusinessLogic_HelperClass absligBusinessLogicHelperClassObj = new ABSLIG_BusinessLogic_HelperClass();
+    absligBusinessLogicHelperClassObj.prePopulateFields(newLeadList);
+    }
 }
