--- a/force-app/main/default/classes/ABSLI_Constants.cls
+++ b/force-app/main/default/classes/ABSLI_Constants.cls
@@ -19,6 +19,12 @@ public class ABSLI_Constants {
     public static final String CHECKLIST_PASS_STATUS = 'Signature Matched,Yes';
     public static final List<String> CHECKLIST_FAILURE_STATUS = new List<String>{'Signature Mismatched', 'No'};
     public static final List<String> NOMINEE_UPDATE_POLICY_IDENTIFICATION_VALIDATION = new List<String>{'Married Women Property Act','Hindu Undivided Family Act','Key Man Act'};
+    public static final Map<String,String> FIELD_AND_TYPE_FOR_CUSTOMER_PORTAL_REDIRECTION = new Map<String,String>
+    {'Reinstatement_Amount__c'=>'Decimal',
+     'COI_Covid_Quest__c' => 'String',
+     'Medicals__c'=> 'String',
+     'Remarks__c' => 'String',
+     'COI_Signed_Date__c' => 'Date'};
 
     /* Bitly Link REAL TIME API
      */
@@ -37,13 +43,14 @@ public class ABSLI_Constants {
 
     /** SERVICES NAME BELOW **/
     public static final String MobileUpdateSrvName = 'ContactUpdateApi';
-    public static final String WHATSAPPOPTOUT_OPTIN_NAME = 'WHATSAPPOPTOUT_OPTINApi';
+    public static final String WHATSAPPOPTOUT_OPTIN_NAME = 'WhatappOptoutUpdateApi';
     public static final String InstaIssuranceAPI = 'InstaIssuranceApi';
     public static final String PanUpdateSrvName = 'PanUpdateApi';
     public static final String BankEsbSrvName = 'BankESBService';
     public static final String AddressUpdateSrvName = 'Address Update';
     public static final String ModeChangeSrvName = 'ModeChangeApi';
     public static final String SurvivalUpdateSrvName = 'survivalUpdateApi';
+    public static final String RQApiSrvName = 'RQServiceApi';
 
     /* BITLY INTEGRATION **/
     public static final String BITLY_LOB_VAL = '';
@@ -142,11 +149,11 @@ public class ABSLI_Constants {
     public static final String LOANVOUCHERPROCESS_SUBTYPE = 'Loan Payout';
 
     /* NOMINEE UPDATE INTEGRATION */
-    public static final String DELETENOMINEE_SRV_NAME = 'NomineeDeleteApi';
+    public static final String DELETENOMINEE_SRV_NAME = 'DeleteNominee';
     public static final String DELETENOMINEE_EVALUATION_ERROR = 'ABSLI_DELETENOMINEE_EVALUTION_ERROR';
-    public static final String UPDATENOMINEE_SRV_NAME = 'NomineeUpdateApi';
+    public static final String UPDATENOMINEE_SRV_NAME = 'UpdateNominee';
     public static final String UPDATENOMINEE_EVALUATION_ERROR = 'ABSLI_UPDATENOMINEE_EVALUTION_ERROR';
-    public static final String CREATENOMINEE_SRV_NAME = 'NomineeCreateApi';
+    public static final String CREATENOMINEE_SRV_NAME = 'CreateNominee';
     public static final String CREATENOMINEE_EVALUATION_ERROR = 'ABSLI_CREATENOMINEE_EVALUTION_ERROR';
 
 	/* REAL TIME INTEGRATION METADATA NAME */
@@ -162,6 +169,7 @@ public class ABSLI_Constants {
     /* IGMS OUTBOUND API */
     public static final List<String> IGMS_COMPLAINT_CATEGORIES = new List<String>{'Complaint'};
         public static final List<String> validGenders = new List<String>{'Male','Female','M','F'};
+            public static final Map<String,String> mapOfGender= new Map<String,String>{'Male' =>'M', 'Female'=>'F'};
             public static final List<String> RECEIPT_NO_REQ_COMP_TYPE_CD = new List<String>{'1','7'};
     public static final String IGMS_REGCOMPLAINT_EVAL_ERROR = 'ABSLI_IGMSREGCOMPLAINT_EVAL_ERROR';
     public static final String IGMS_ATTCOMPLAINT_EVAL_ERROR = 'ABSLI_IGMSATTCOMPLAINT_EVAL_ERROR';
@@ -193,5 +201,16 @@ public class ABSLI_Constants {
     public static final String CLOSED_COMPLAINT_SCHEDULE_JOB = 'IGMS Closed Complaints Outbound Schedulde Job';
     public static final String ABSLI_IGMSSYNC_SUCCESS_MESSAGE = 'ABSLI_IGMSSYNC_SUCCESS_MESSAGE';
     public static final String ABSLI_IGMSSYNC_FAILURE_MESSAGE = 'ABSLI_IGMSSYNC_FAILURE_MESSAGE';
+    
+    
+    /* LOAN REPAYMENTS INTEGRATION */
+    public static final String LOAN_REPAYMENT_EVAL_ERROR = 'ABSLI_LOAN_REPAYMENT_EVAL_ERROR';
+    public static final String LOAN_REPAYMENT_SERVICE_NAME = 'LoanRepaymentApi';
+    
+    
+    /* LITMUS API */
+    public static final String LITMUS_SOURCE_REQ_BY = 'Customer';
+    public static final String LITMUS = 'Litmus';
+
 
 }
