ABSLIG Add On Changes V2.10

--- a/force-app/main/default/classes/ABCL_CommonCLass_Test.cls
+++ b/force-app/main/default/classes/ABCL_CommonCLass_Test.cls
@@ -26,4 +26,27 @@ public with sharing class ABCL_CommonCLass_Test {
     static void prepopulateCaseFldsTestMethod() {
         
     }
+
+    @SuppressWarnings('PMD.UnusedLocalVariable')
+    @isTest
+    static void testCalculateSlaOverwriteIdentifier() {
+
+      ABCL_CommonCLass abclCommonCLassObj = new ABCL_CommonCLass();
+
+      String result1 = abclCommonCLassObj.calculateSlaOverwriteIdentifier(945);
+      
+      String result2 = abclCommonCLassObj.calculateSlaOverwriteIdentifier(980);
+
+      String result3 = abclCommonCLassObj.calculateSlaOverwriteIdentifier(1050);
+
+      String result4 = abclCommonCLassObj.calculateSlaOverwriteIdentifier(1100);
+
+      String result5 = abclCommonCLassObj.calculateSlaOverwriteIdentifier(1160);
+
+      String result6 = abclCommonCLassObj.calculateSlaOverwriteIdentifier(1220);
+
+      String result7 = abclCommonCLassObj.calculateSlaOverwriteIdentifier(1280);
+      // Validate bypass validation logic
+      System.assertEquals('8', result7, '8');
+    }
 }
